servicio fix create

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,7 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "IncludeScopes": true
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=172.22.224.1;Database=SPOrchestratorDb;User Id=apiexport;Password=Osm3d1c4;TrustServerCertificate=True;"
   }
 }
