--- a/SPOrchestratorAPI.csproj
+++ b/SPOrchestratorAPI.csproj
@@ -7,13 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
+      <PackageReference Include="MySql.Data" Version="9.2.0" />
+      <PackageReference Include="Npgsql" Version="9.0.2" />
+      <PackageReference Include="Oracle.ManagedDataAccess" Version="23.7.0" />
+      <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.7.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7" />
+      <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
       <PackageReference Include="System.Linq.Async" Version="6.0.1" />
       <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
