--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,11 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    },
-    "Console": {
-      "IncludeScopes": true
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Development": "Trace",
+      "Production": "Error"
     }
   },
   "AllowedHosts": "*",
