--- a/compose.yaml
+++ b/compose.yaml
@@ -18,7 +18,7 @@ services:
     image: nginx:latest
     container_name: nginx-proxy
     ports:
-      - "80:80"
+      - "8080:80"  # Mapea el puerto 8080 del host al puerto 80 del contenedor
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
