--- a/SPOrchestratorAPI.csproj
+++ b/SPOrchestratorAPI.csproj
@@ -26,4 +26,8 @@
       <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include=".github\workflows\dotnet.yml" />
+    </ItemGroup>
+
 </Project>
