Parameters Swagger && HangFire and new toglemiddleware

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,5 +11,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=172.22.224.1;Database=SPOrchestratorDb;User Id=apiexport;Password=Osm3d1c4;TrustServerCertificate=True;"
+  },
+  "Hangfire": {
+    "EnableDashboard": true,
+    "DashboardPath": "/hangfire"
   }
 }
