--- a/SPOrchestratorAPI.csproj
+++ b/SPOrchestratorAPI.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="Cronos" Version="0.9.0" />
       <PackageReference Include="Hangfire" Version="1.8.18" />
+      <PackageReference Include="Hangfire.Dashboard.Basic.Authentication" Version="7.0.1" />
       <PackageReference Include="Hangfire.SqlServer" Version="1.8.18" />
       <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
