--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -12,5 +12,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=172.22.224.1;Database=SPOrchestratorDb;User Id=apiexport;Password=Osm3d1c4;TrustServerCertificate=True;"
   },
-  "Hangfire": { "EnableDashboard": true }
+  "Hangfire": {
+    "EnableDashboard": true,
+    "DashboardPath": "/hangfire"
+  }
 }
