--- a/SPOrchestratorAPI.csproj
+++ b/SPOrchestratorAPI.csproj
@@ -23,6 +23,9 @@
       <PackageReference Include="Npgsql" Version="9.0.2" />
       <PackageReference Include="Oracle.ManagedDataAccess" Version="23.7.0" />
       <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.7.0" />
+      <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+      <PackageReference Include="Serilog.Sinks.NewRelic" Version="2.0.0" />
+      <PackageReference Include="Serilog.Sinks.NewRelic.Logs" Version="1.3.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7" />
       <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
       <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
